--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -55,6 +55,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DAO\CustomerDao.cs" />
+    <Compile Include="DAO\OrderDao.cs" />
+    <Compile Include="DAO\OrderDetailDao.cs" />
+    <Compile Include="DAO\ProductCategoryDAO.cs" />
     <Compile Include="DAO\ProductDAO.cs" />
     <Compile Include="EF\Customer.cs" />
     <Compile Include="EF\OnlineShopElectronicsDbContext.cs" />
@@ -64,6 +67,7 @@
     <Compile Include="EF\ProductCategory.cs" />
     <Compile Include="EF\Supplierss.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModel\ProductViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.csproj">
